--- a/inst/exercises/partitioning/evaporationH2O/evaporationH2O.Rmd
+++ b/inst/exercises/partitioning/evaporationH2O/evaporationH2O.Rmd
@@ -3,7 +3,7 @@ title: "Evaporation and precipitation of water"
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
 author: "Lubos Polerecky, Utrecht University"
 date: "January 2022"
-abstract: \noindent Consider a water body surrounded by air. If the relative humidity of the air is below 100%, water will evaporate. In contrast, if the relative air humidity exceeds 100%, which occurs, for instance, when air with a given water vapor content cools down, water will precipitate from the gas phase to form a liquid. In both cases, the process will continue until an equilibrium is reached, i.e., until the relative humidity reaches 100%. In this reader, we will show how these processes can be modeled in R.
+abstract: \noindent Consider a water body surrounded by air. If the relative humidity of the air is below 100%, water will evaporate. In contrast, if the relative air humidity exceeds 100%, which occurs, for instance, when air with a given water vapor content sufficiently cools down, water will precipitate from the gas phase to form a liquid. In both cases, the process will continue until an equilibrium is reached, i.e., until the relative air humidity reaches 100%. In this reader, we will show how these processes can be modeled in R.
 output: 
   pdf_document:
     toc: no
